--- a/03_Introduction_to_RAG/03_03_Query_Pipeline.ipynb
+++ b/03_Introduction_to_RAG/03_03_Query_Pipeline.ipynb
@@ -68,6 +68,10 @@
    "source": [
     "# Query Pipelines\n",
     "\n",
+    "<img src=\"https://docs.llamaindex.ai/en/stable/_static/query/pipeline_rag_example.png\">\n",
+    "\n",
+    "Source: [LlamaIndex Docs](https://docs.llamaindex.ai/en/stable/module_guides/querying/pipeline/)\n",
+    "\n",
     "LlamaIndex offers a query API for chaining modules to manage data workflows easily. It revolves around the QueryPipeline, where you link various modules like LLMs, prompts, and retrievers in a sequence or DAG for end-to-end execution.\n",
     "\n",
     "You can streamline workflows efficiently using QueryPipeline, reducing code complexity and enhancing readability. Additionally, a declarative interface ensures easy serialization of pipeline components for portability and deployment across systems in the future."
@@ -118,15 +122,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine(\n",
-    "    similarity_top_k=7, \n",
-    "    return_sources=True\n",
-    "    )"
+    "# A RAG Pipeline with PromptTemplate\n",
+    "\n",
+    "I'm going to kick it off with a slightly complex workflow where the input is passes through two prompts before initiating retrieval.\n",
+    "\n",
+    "1. Retrieve question about given topic.\n",
+    "\n",
+    "2. Rephrase the context\n",
+    "\n",
+    "Each prompt only takes in one input, so `QueryPipeline` will automatically chain LLM outputs into the prompt and then into the LLM.\n",
+    "\n",
+    "You'll see how to define links more explicitly in the next section."
    ]
   },
   {
@@ -136,10 +145,34 @@
    "outputs": [],
    "source": [
     "from llama_index.core.query_pipeline import QueryPipeline\n",
+    "from llama_index.core import PromptTemplate\n",
+    "from llama_index.core import PromptTemplate\n",
+    "\n",
+    "# generate question regarding topic\n",
+    "prompt_str1 = \"Retrieve context about the following topic: {topic}\"\n",
+    "prompt_tmpl1 = PromptTemplate(prompt_str1)\n",
+    "\n",
+    "prompt_str2 = \"\"\"Syntesize the context provided into an answer using modern slang, while still quoting the sources.\n",
+    "\n",
+    "Context:\n",
+    "\n",
+    "{query_str}\n",
+    "\n",
+    "Syntesized response:\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt_tmpl2 = PromptTemplate(prompt_str2)\n",
+    "\n",
+    "retriever = index.as_retriever(similarity_top_k=5)\n",
     "\n",
     "p = QueryPipeline(\n",
-    "    chain=[Settings.llm, query_engine],\n",
-    "    verbose=True\n",
+    "    chain=[\n",
+    "        prompt_tmpl1, \n",
+    "        retriever,\n",
+    "        prompt_tmpl2, \n",
+    "        Settings.llm, \n",
+    "        ], \n",
+    "        verbose=True\n",
     ")"
    ]
   },
@@ -149,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = p.run(\"What advice from the text about Forget the past and move forward with strength and courage\")"
+    "response = p.run(topic=\"Working hard to achieve your goals even when you doubt yourself and your chances of success\")"
    ]
   },
   {
@@ -158,7 +191,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(resp)"
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can debug the pipeline by viewing intermediate inputs and outputs"
    ]
   },
   {
@@ -167,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = QueryPipeline(verbose=True)"
+    "output, intermediates  = p.run_with_intermediates(topic=\"Working hard to achieve your goals even when you doubt yourself and your chances of success\")"
    ]
   },
   {
@@ -176,10 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q.add_modules({\n",
-    "    \"llm\": Settings.llm,\n",
-    "    \"query_engine\": query_engine,\n",
-    "})"
+    "output.__dict__"
    ]
   },
   {
@@ -188,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q.add_link(\"llm\", \"query_engine\")"
+    "intermediates"
    ]
   },
   {
@@ -197,7 +234,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = q.run(\"What Poems aligns with themes in Stoic Philosophy?\")"
+    "intermediates['d7612067-3809-4d48-aa49-0c957da8de40']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Another RAG Pipeline\n",
+    "\n",
+    "Here we setup a RAG pipeline without the query rewriting step.\n",
+    "\n",
+    "Here we need a way to link the input query to both the retriever and summarizer. \n",
+    "\n",
+    "We can do this by defining a special `InputComponent`, allowing us to link the inputs to multiple downstream modules."
    ]
   },
   {
@@ -206,8 +256,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(resp)"
+    "from llama_index.core.response_synthesizers import TreeSummarize\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "from llama_index.llms.openai import OpenAI\n",
+    "\n",
+    "input = InputComponent()\n",
+    "\n",
+    "retriever = index.as_retriever(similarity_top_k=5)\n",
+    "\n",
+    "llm = OpenAI(model=\"gpt-4o\")\n",
+    "\n",
+    "tree_summarizer = TreeSummarize(llm=llm)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = QueryPipeline(verbose=True, show_progress=True)\n",
+    "\n",
+    "p.add_modules(\n",
+    "    {\n",
+    "        \"input\": input,\n",
+    "        \"retriever\": retriever,\n",
+    "        \"tree_summarizer\": tree_summarizer,\n",
+    "    }\n",
+    ")\n",
+    "p.add_link(\"input\", \"retriever\")\n",
+    "p.add_link(\"input\", \"tree_summarizer\", dest_key=\"query_str\")\n",
+    "p.add_link(\"retriever\", \"tree_summarizer\", dest_key=\"nodes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = p.run(input=\"Working hard to achieve your goals even when you doubt yourself and your chances of success\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(str(response))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -226,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
