--- a/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
@@ -7,7 +7,20 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-cohere==0.2.0"
+    "!pip install datasets llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-cohere==0.2.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: you should install the following packages to your environment:\n",
+    "\n",
+    "`pip install datasets`\n",
+    "\n",
+    "`pip install llama-index-embeddings-fastembed`\n",
+    "\n",
+    "`pip install llama-index-llms-mistralai`"
    ]
   },
   {
@@ -175,7 +188,11 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "chain = [Settings.llm, query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "chain = [input_component, query_engine]\n",
     "\n",
     "query_pipeline = create_query_pipeline(chain)"
    ]
@@ -186,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = query_pipeline.run(\"What do the poems teach about one should think about success and failure?\")"
+    "response = query_pipeline.run(input=\"If you keep your head when all around you are losing their cool and blaming it on you\")"
    ]
   },
   {
@@ -195,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(response.response)"
+    "print(response)"
    ]
   },
   {
@@ -232,6 +249,8 @@
     "# Response modes\n",
     "\n",
     "In LlamaIndex, [response modes](https://docs.llamaindex.ai/en/stable/module_guides/deploying/query_engine/response_modes/) are used to determine how the system should process and return the results of a query.  Each response mode is designed to handle different types of queries and use cases, providing flexibility and customization in how you interact with your data.\n",
+    "\n",
+    "\n",
     "\n",
     "#### ⚗️ Refine \n",
     "\n",
@@ -291,14 +310,17 @@
     "\n",
     "query_engine = create_query_engine(\n",
     "    index,\n",
+    "    mode=\"query\",\n",
     "    response_synthesizer = response_synthesizer\n",
     "    )\n",
     "\n",
-    "chain = [Settings.llm, query_engine]\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "chain = [input_component, query_engine, Settings.llm,]\n",
     "\n",
     "query_pipeline = create_query_pipeline(chain)\n",
     "\n",
-    "query_pipeline.run(\"What do the poems teach about one should think about success and failure?\")"
+    "query_pipeline.run(input=\"What do the poems teach about one should think about success and failure?\")"
    ]
   }
  ],
@@ -318,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
