--- a/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
@@ -6,8 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " %%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-readers-smart-pdf-loader pymupdf"
+    "%%capture\n",
+    "!pip install llama-index==0.10.37 llama-index-readers-smart-pdf-loader pymupdf llamasherpa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note, you will need to install the following before running this notebook:\n",
+    "\n",
+    "`pip install llama-index-readers-smart-pdf-loader`\n",
+    "\n",
+    "`pip install pymupdf`\n",
+    "\n",
+    "`pip install llmsherpa`\n"
    ]
   },
   {
@@ -70,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,70 +111,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(simple_directory_reader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BUILDING  JUDGMENT ·  101SHED YOUR IDENTITY TO SEE REALITY\n",
+      "Our egos are constructed in our formative years—our first \n",
+      "two decades. They get constructed by our environment, our \n",
+      "parents, society. Then, we spend the rest of our life trying to \n",
+      "make our ego happy. We interpret anything new through our \n",
+      "ego: “How do I change the external world to make it more how \n",
+      "I would like it to be?” [8]\n",
+      "“Tension is who you think you should be.  \n",
+      "Relaxation is who you are.”\n",
+      "—Buddhist saying\n",
+      "You absolutely need habits to function. You cannot solve every \n",
+      "problem in life as if it is the first time it’s thrown at you. We \n",
+      "accumulate all these habits. We put them in the bundle of \n",
+      "identity, ego, ourselves, and then we get attached to them. “I’m \n",
+      "Naval. This is the way I am.”\n",
+      "It’ s really important to be able to uncondition yourself, to be \n",
+      "able to take your habits apart and say, “Okay, this is a habit I \n",
+      "probably picked up when I was a toddler trying to get my par-\n",
+      "ent’s attention. Now I’ve reinforced it and reinforced it, and \n",
+      "I call it a part of my identity. Does it still serve me? Does it \n",
+      "make me happier? Does it make me healthier? Does it make \n",
+      "me accomplish whatever I set out to accomplish?”\n",
+      "I’m less habitual than most people. I don’t like to structure \n",
+      "my day. To the extent I have habits, I try to make them more \n",
+      "deliberate rather than accidents of history. [4]\n"
+     ]
+    }
+   ],
    "source": [
     "print(simple_directory_reader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "932"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(smart_pdf_loader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PART I WEALTH > BUILDING WEALTH > UNDERSTAND HOW WEALTH IS CREATED > How to Get Rich (Without Getting Lucky):\n",
+      "↓ The internet has massively broadened the possible space of careers.\n",
+      "Most people haven’t figured this out yet.\n"
+     ]
+    }
+   ],
    "source": [
     "print(smart_pdf_loader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(pdf_reader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BUILDING  JUDGMENT ·  101SHED YOUR IDENTITY TO SEE REALITY\n",
+      "Our egos are constructed in our formative years—our first \n",
+      "two decades. They get constructed by our environment, our \n",
+      "parents, society. Then, we spend the rest of our life trying to \n",
+      "make our ego happy. We interpret anything new through our \n",
+      "ego: “How do I change the external world to make it more how \n",
+      "I would like it to be?” [8]\n",
+      "“Tension is who you think you should be.  \n",
+      "Relaxation is who you are.”\n",
+      "—Buddhist saying\n",
+      "You absolutely need habits to function. You cannot solve every \n",
+      "problem in life as if it is the first time it’s thrown at you. We \n",
+      "accumulate all these habits. We put them in the bundle of \n",
+      "identity, ego, ourselves, and then we get attached to them. “I’m \n",
+      "Naval. This is the way I am.”\n",
+      "It’ s really important to be able to uncondition yourself, to be \n",
+      "able to take your habits apart and say, “Okay, this is a habit I \n",
+      "probably picked up when I was a toddler trying to get my par-\n",
+      "ent’s attention. Now I’ve reinforced it and reinforced it, and \n",
+      "I call it a part of my identity. Does it still serve me? Does it \n",
+      "make me happier? Does it make me healthier? Does it make \n",
+      "me accomplish whatever I set out to accomplish?”\n",
+      "I’m less habitual than most people. I don’t like to structure \n",
+      "my day. To the extent I have habits, I try to make them more \n",
+      "deliberate rather than accidents of history. [4]\n"
+     ]
+    }
+   ],
    "source": [
     "print(pdf_reader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pdf_reader_docs[100].text == simple_directory_reader_docs[100].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +309,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I have some sales skills, which is a form of specific knowledge. ',\n",
+       " 'I have some analytical skills on how to make money. And I ',\n",
+       " 'have this ability to absorb data, obsess about it, and break it ',\n",
+       " 'down—that is a specific skill that I have. I also love tinkering ',\n",
+       " 'with technology. And all of this stuff feels like play to me, but ',\n",
+       " 'it looks like work to others.',\n",
+       " 'There are other people to whom these things would be hard, ',\n",
+       " 'and they say, “Well, how do I get good at being pithy and sell-',\n",
+       " 'ing ideas?” Well, if you’re not already good at it or if you’re not ',\n",
+       " 'really into it, maybe it’s not your thing—focus on the thing ',\n",
+       " 'that you are really into.',\n",
+       " 'The first person to actually point out my real specific knowl-',\n",
+       " 'edge was my mother. She did it as an aside, talking from the ',\n",
+       " 'kitchen, and she said it when I was fifteen or sixteen years old. ',\n",
+       " 'I was telling a friend of mine that I want to be an astrophysi-',\n",
+       " 'cist, and she said, “No, you’re going to go into business.” I was ',\n",
+       " 'like, “What, my mom’s telling me I’m going to be in business? ',\n",
+       " 'I’m going to be an astrophysicist. Mom doesn’t know she’s ',\n",
+       " 'talking about.” But Mom knew exactly what she was talking ',\n",
+       " 'about.\\xa0[78]',\n",
+       " 'Specific knowledge is found much more by pursuing your ',\n",
+       " 'innate talents, your genuine curiosity, and your passion. It’s ',\n",
+       " 'not by going to school for whatever is the hottest job; it’s not ',\n",
+       " 'by going into whatever field investors say is the hottest.',\n",
+       " 'Very often, specific knowledge is at the edge of knowledge. It’s ',\n",
+       " 'also stuff that’s only now being figured out or is really hard to ',\n",
+       " 'figure out. If you’re not 100 percent into it, somebody else who ',\n",
+       " 'is 100 percent into it will outperform you. And they won’t just ',\n",
+       " 'outperform you by a little bit—they’ll outperform you by a lot ',\n",
+       " 'B u i l d i n g  W e a l t h \\u2002 · \\u2002 43',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pages[42] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,14 +477,37 @@
     "    document = get_document(file_path, pages)\n",
     "    file_name = os.path.basename(file_path)\n",
     "    extracted_texts = [extract_text(page, file_path, title, author, flag) for page in document]\n",
-    "    return extracted_texts\n"
+    "    return extracted_texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting texts from The Almanack of Naval Ravikant by Naval Ravikant...\n",
+      "Finished extracting texts from The Almanack of Naval Ravikant.\n",
+      "Extracting texts from The Anthology of Balaji Srinivasan by Balaji Srinivasan...\n",
+      "Finished extracting texts from The Anthology of Balaji Srinivasan.\n",
+      "Extracting texts from Hackers and Painters by Paul Graham...\n",
+      "Finished extracting texts from Hackers and Painters.\n",
+      "Extracting texts from Skin in the Game by Nassim Nicholas Taleb...\n",
+      "Finished extracting texts from Skin in the Game.\n",
+      "Extracting texts from Letters From a Stoic Volume 1 by Seneca...\n",
+      "Finished extracting texts from Letters From a Stoic Volume 1.\n",
+      "Extracting texts from Letters From a Stoic Volume 2 by Seneca...\n",
+      "Finished extracting texts from Letters From a Stoic Volume 2.\n",
+      "Extracting texts from Letters From a Stoic Volume 3 by Seneca...\n",
+      "Finished extracting texts from Letters From a Stoic Volume 3.\n",
+      "Extracting texts from Striking Thoughts by Bruce Lee...\n",
+      "Finished extracting texts from Striking Thoughts.\n"
+     ]
+    }
+   ],
    "source": [
     "pdf_files = [\n",
     "    {\n",
@@ -384,18 +579,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1884"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(all_texts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'Set a very high hourly aspirational rate for yourself and stick to it. It should seem and feel absurdly high. If it doesnt, its not high enough. Whatever you picked, my advice to you would be to raise it. Like I said, for myself, even before I had money, for the longest time I used $5,000 an hour. And if you extrapolate that out into what it looks like as an annual salary, its multiple millions of dollars per year. Ironically, I actually think Ive beaten it. Im not the hardest working personIm actually a lazy person. I work through bursts of energy where Im really motivated with something. If I actually look at how much Ive earned per actual hour that Ive put in, its probably quite a bit higher than that. Can you expand on your statement, If you secretly despise wealth, it will elude you? If you get into a relative mindset, youre always going to hate people who do better than you, youre always going to be jealous or envious of them. Theyll sense those feelings when you try and do business with them. When you try and do business with somebody, if you have any bad thoughts or any judgments about them, they will feel it. Humans are wired to feel what the other person deep down inside feels. You have to get out of a relative mindset. Literally, being anti-wealth will prevent you from becoming wealthy, because you will not have the right mindset for it, you wont have the right spirit, and you wont be dealing with people on the right level. Be optimistic, be positive. Its important. Optimists actually do better in the long run.',\n",
+       " 'metadata': {'page_number': 42,\n",
+       "  'file_name': '../data/almanack_of_naval_ravikant.pdf',\n",
+       "  'title': 'The Almanack of Naval Ravikant',\n",
+       "  'author': 'Naval Ravikant'}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all_texts[42]"
    ]
@@ -409,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,25 +641,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1884"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(llama_index_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id_': '36194420-275a-4959-923d-bac8023b69f9',\n",
+       " 'embedding': None,\n",
+       " 'metadata': {'page_number': 0,\n",
+       "  'file_name': '../data/almanack_of_naval_ravikant.pdf',\n",
+       "  'title': 'The Almanack of Naval Ravikant',\n",
+       "  'author': 'Naval Ravikant'},\n",
+       " 'excluded_embed_metadata_keys': [],\n",
+       " 'excluded_llm_metadata_keys': [],\n",
+       " 'relationships': {},\n",
+       " 'text': 'UNDERSTAND HOW WEALTH IS CREATED I like to think that if I lost all my money and you dropped me on a random street in any English-speaking country, within five or ten years Id be wealthy again because its just a skillset Ive developed that anyone can develop. Its not really about hard work. You can work in a restaurant eighty hours a week, and youre not going to get rich. Getting rich is about knowing what to do, who to do it with, and when to do it. It is much more about understanding than purely hard work. Yes, hard work matters, and you cant skimp on it. But it has to be directed in the right way. If you dont know yet what you should work on, the most important thing is to figure it out. You should not grind at a lot of hard work until you figure out what you should be working on. I came up with the principles in my tweetstorm (below) for myself when I was really young, around thirteen or fourteen. Ive been carrying them in my head for thirty years, and Ive been living them. Over time (sadly or fortunately), the thing I got really good at was looking at businesses and figuring out the point of maximum leverage to actually create wealth and capture some of that created wealth. This is exactly what I did my famous tweetstorm about. Of course, every one of these tweets can be extrapolated into an hours worth of conversation. The tweetstorm below is a good starting point. The tweetstorm tries to be information-dense, very concise, high-impact, and timeless. It has all the information and principles, so if you absorb these and you work hard over ten years, youll get what you want.',\n",
+       " 'start_char_idx': None,\n",
+       " 'end_char_idx': None,\n",
+       " 'text_template': '{metadata_str}\\n\\n{content}',\n",
+       " 'metadata_template': '{key}: {value}',\n",
+       " 'metadata_seperator': '\\n'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llama_index_docs[0].__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +763,9 @@
     "\n",
     "- [GROBID](https://grobid.readthedocs.io/en/latest/Introduction/) - This is a a machine learning library for extracting, parsing and re-structuring raw documents such as PDF into structured XML/TEI encoded documents with a particular focus on technical and scientific publications.\n",
     "\n",
-    "- [LaTeX-OCR](https://github.com/lukas-blecher/LaTeX-OCR/) - Uses a vision transformer (ViT) to convert images of equations into LaTeX code.\n"
+    "- [LaTeX-OCR](https://github.com/lukas-blecher/LaTeX-OCR/) - Uses a vision transformer (ViT) to convert images of equations into LaTeX code.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -526,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
