--- a/03_Introduction_to_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Introduction_to_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -247,7 +247,8 @@
    "source": [
     "The ingestion pipeline allows for saves the cache and docstore to a default folder `(./pipeline_storage)`. \n",
     "\n",
-    "When running the pipeline, it reuses the cache, skips duplicate documents in the docstore."
+    "When running the pipeline, it reuses the cache, skips duplicate documents in the docstore.\n",
+    "\n"
    ]
   },
   {
@@ -276,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
